cdk.out/VpcStack.template.json
{
  "Resources": {
    "vpcA2121C38": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.16.0.0/17",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk_trial-staging-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/Resource"
      }
    },
    "vpcapppublicSubnet1Subnet2815C702": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.16.0.0/27",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "app-public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/app-publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/app-publicSubnet1/Subnet"
      }
    },
    "vpcapppublicSubnet1RouteTableD6BF3DDB": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/app-publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/app-publicSubnet1/RouteTable"
      }
    },
    "vpcapppublicSubnet1RouteTableAssociationC72BB2A9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcapppublicSubnet1RouteTableD6BF3DDB"
        },
        "SubnetId": {
          "Ref": "vpcapppublicSubnet1Subnet2815C702"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/app-publicSubnet1/RouteTableAssociation"
      }
    },
    "vpcapppublicSubnet1DefaultRoute82B46A78": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcapppublicSubnet1RouteTableD6BF3DDB"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcIGWE57CBDCA"
        }
      },
      "DependsOn": [
        "vpcVPCGW7984C166"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/app-publicSubnet1/DefaultRoute"
      }
    },
    "vpcapppublicSubnet2Subnet9966F4E4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.16.0.32/27",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "app-public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/app-publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/app-publicSubnet2/Subnet"
      }
    },
    "vpcapppublicSubnet2RouteTable8B14DA74": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/app-publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/app-publicSubnet2/RouteTable"
      }
    },
    "vpcapppublicSubnet2RouteTableAssociation6E047D14": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcapppublicSubnet2RouteTable8B14DA74"
        },
        "SubnetId": {
          "Ref": "vpcapppublicSubnet2Subnet9966F4E4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/app-publicSubnet2/RouteTableAssociation"
      }
    },
    "vpcapppublicSubnet2DefaultRoute9D3FBA28": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcapppublicSubnet2RouteTable8B14DA74"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcIGWE57CBDCA"
        }
      },
      "DependsOn": [
        "vpcVPCGW7984C166"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/app-publicSubnet2/DefaultRoute"
      }
    },
    "vpctrackerpublicSubnet1Subnet5E46A5D2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.16.0.64/27",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "tracker-public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/tracker-publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/tracker-publicSubnet1/Subnet"
      }
    },
    "vpctrackerpublicSubnet1RouteTableAD670BD0": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/tracker-publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/tracker-publicSubnet1/RouteTable"
      }
    },
    "vpctrackerpublicSubnet1RouteTableAssociationBF90721D": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpctrackerpublicSubnet1RouteTableAD670BD0"
        },
        "SubnetId": {
          "Ref": "vpctrackerpublicSubnet1Subnet5E46A5D2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/tracker-publicSubnet1/RouteTableAssociation"
      }
    },
    "vpctrackerpublicSubnet1DefaultRoute6FF9A787": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpctrackerpublicSubnet1RouteTableAD670BD0"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcIGWE57CBDCA"
        }
      },
      "DependsOn": [
        "vpcVPCGW7984C166"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/tracker-publicSubnet1/DefaultRoute"
      }
    },
    "vpctrackerpublicSubnet2Subnet02ECC5A9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.16.0.96/27",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "tracker-public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/tracker-publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/tracker-publicSubnet2/Subnet"
      }
    },
    "vpctrackerpublicSubnet2RouteTable3A53A604": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/tracker-publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/tracker-publicSubnet2/RouteTable"
      }
    },
    "vpctrackerpublicSubnet2RouteTableAssociation43B3C55D": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpctrackerpublicSubnet2RouteTable3A53A604"
        },
        "SubnetId": {
          "Ref": "vpctrackerpublicSubnet2Subnet02ECC5A9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/tracker-publicSubnet2/RouteTableAssociation"
      }
    },
    "vpctrackerpublicSubnet2DefaultRoute91B3E564": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpctrackerpublicSubnet2RouteTable3A53A604"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcIGWE57CBDCA"
        }
      },
      "DependsOn": [
        "vpcVPCGW7984C166"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/tracker-publicSubnet2/DefaultRoute"
      }
    },
    "vpcrdsSubnet1Subnet81509054": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.16.0.128/27",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "rds"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/rdsSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/rdsSubnet1/Subnet"
      }
    },
    "vpcrdsSubnet1RouteTableFFE08759": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/rdsSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/rdsSubnet1/RouteTable"
      }
    },
    "vpcrdsSubnet1RouteTableAssociation3E946461": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcrdsSubnet1RouteTableFFE08759"
        },
        "SubnetId": {
          "Ref": "vpcrdsSubnet1Subnet81509054"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/rdsSubnet1/RouteTableAssociation"
      }
    },
    "vpcrdsSubnet2SubnetCEFF1A53": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.16.0.160/27",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "rds"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/rdsSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/rdsSubnet2/Subnet"
      }
    },
    "vpcrdsSubnet2RouteTable780314E2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/rdsSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/rdsSubnet2/RouteTable"
      }
    },
    "vpcrdsSubnet2RouteTableAssociationA8E58271": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcrdsSubnet2RouteTable780314E2"
        },
        "SubnetId": {
          "Ref": "vpcrdsSubnet2SubnetCEFF1A53"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/rdsSubnet2/RouteTableAssociation"
      }
    },
    "vpcelasticacheSubnet1SubnetF704D04A": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.16.0.192/27",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "elasticache"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/elasticacheSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/elasticacheSubnet1/Subnet"
      }
    },
    "vpcelasticacheSubnet1RouteTable4F7940F1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/elasticacheSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/elasticacheSubnet1/RouteTable"
      }
    },
    "vpcelasticacheSubnet1RouteTableAssociation3F596327": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcelasticacheSubnet1RouteTable4F7940F1"
        },
        "SubnetId": {
          "Ref": "vpcelasticacheSubnet1SubnetF704D04A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/elasticacheSubnet1/RouteTableAssociation"
      }
    },
    "vpcelasticacheSubnet2SubnetD0CDC3EF": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.16.0.224/27",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "elasticache"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/elasticacheSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/elasticacheSubnet2/Subnet"
      }
    },
    "vpcelasticacheSubnet2RouteTable0D6A4A77": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc/elasticacheSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/elasticacheSubnet2/RouteTable"
      }
    },
    "vpcelasticacheSubnet2RouteTableAssociation9E6A2586": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcelasticacheSubnet2RouteTable0D6A4A77"
        },
        "SubnetId": {
          "Ref": "vpcelasticacheSubnet2SubnetD0CDC3EF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/elasticacheSubnet2/RouteTableAssociation"
      }
    },
    "vpcIGWE57CBDCA": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk_trial-staging-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/IGW"
      }
    },
    "vpcVPCGW7984C166": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "InternetGatewayId": {
          "Ref": "vpcIGWE57CBDCA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/02PTQ+CMAyGf4v3MZWDxiPhYLwRMFzNNmosH5vZOogh/HeHEvHUt0+aPm3M90e+24jBRapqohYlHwsSqmEB3UDFfCyfiqV3XWYpy7xsURVeaqCZrSk3nuAqZAsrX1ninFEoCI3+DbPMYi8I1h0XTWBDPgc6iNciXbqEwlWPDjRNLAdnvFUf1X9Oja5wlkxMmwp47bb9/sBP4cHaIUbWa8IOeP6tbzJ9fg38AAAA"
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "af-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
